# PZ-UDTM

./: .gitattributes  .gitignore  README.md  cpu_bomber.py  settings.gradle.kts
app/: README.md  build.gradle.kts
app/src/androidTest/java/com/km/pz_app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/km/pz_app/: MainActivity.kt  PzApp.kt
app/src/main/java/com/km/pz_app/data/dataProvider/: RaspberryAddressProvider.kt  SystemStatusApi.kt
app/src/main/java/com/km/pz_app/data/dataProvider/remoteTerminal/: ITerminalWebSocketApi.kt  TerminalWebSocketApi.kt
app/src/main/java/com/km/pz_app/data/repository/: FakeSystemRepository.kt  SelectedRaspberryRepository.kt  SystemRepository.kt  WebSocketRepository.kt
app/src/main/java/com/km/pz_app/di/: AppModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/km/pz_app/domain/model/: CpuResponse.kt  ExternalTemperatureResponse.kt  GpioControlRequest.kt  KillProcessRequest.kt  MemoryResponse.kt  ProcessResponse.kt
app/src/main/java/com/km/pz_app/domain/repository/: ISystemRepository.kt  IWebSocketRepository.kt
app/src/main/java/com/km/pz_app/presentation/components/: Input.kt  RaspberryPiSelector.kt  Tile.kt
app/src/main/java/com/km/pz_app/presentation/home/: HomeContract.kt  HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/km/pz_app/presentation/nav/: Destination.kt  PzNavGraph.kt
app/src/main/java/com/km/pz_app/presentation/nav/navigator/: DefaultNavigator.kt  INavigator.kt  NavigationAction.kt
app/src/main/java/com/km/pz_app/presentation/remoteTerminal/: RemoteTerminalContract.kt  RemoteTerminalScreen.kt  RemoteTerminalViewModel.kt
app/src/main/java/com/km/pz_app/presentation/utils/: IpVisualTransformation.kt  ObserveFlowWithLifecycle.kt  Resource.kt  Utils.kt
app/src/main/java/com/km/pz_app/ui/theme/: Color.kt  Font.kt  Theme.kt  Type.kt
app/src/main/res/values/: fonts_certs.xml  strings.xml  themes.xml
app/src/test/java/com/km/pz_app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rpi_ll_sw/: .config  CMakeLists.txt  Makefile  build.sh  cpu.c  cpu.h  dispatcher.c  dispatcher.h  gpio.c  gpio.h  main.c  monitor.c  proc.c  proc.h  ram.c  ram.h  temp.c  temp.h  toolchain_script.sdk.sh
server/: Cargo.toml  server.md
server/src/: config.rs  controller.rs  data_source.rs  handlers.rs  main.rs  models.rs  terminal.rs
web/: index.html  script.js  styles.css
