[package]
name = "system-status-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] } # "full" includes rt-multi-thread, macros, sync, time, net
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Using env-filter is common for flexible log levels
thiserror = "1.0"
once_cell = "1.19"
byteorder = "1.5"

[profile.release]
# Optimizations for smaller bin size, good for embedded
opt-level = "z"  # Optimize for size.
lto = true       # Enable link-time optimization.
codegen-units = 1 # Reduce parallelism for potentially better optimization.
panic = "abort"  # Abort on panic for smaller binary size.
strip = true     # Strip symbols from the binary.